Basic style and stylesheet connection added

--- a/recipes/lomosaltado.html
+++ b/recipes/lomosaltado.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomo Saltado</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lomo Saltado</h1>
+    <h1 class="header">Lomo Saltado</h1>
         <img src="../images/lomosaltado.jpg" alt="An image of a lomo saltado" height="300" width="600">
         <p>This traditional Peruvian dish is a delicious blend of Asian and Latin flavors. Tender strips
              of steak are stir-fried with onions, tomatoes, and French fries, creating a hearty and flavorful 
