--- a/recipes/water.html
+++ b/recipes/water.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Glass of Water</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>A glass of water</h1>
+    <h1 class="header">A glass of water</h1>
     <img src="../images/water.png" alt="An image of a glass of water" height="300" width="600">
     <h2>Description</h2>
         <p>The oldest refreshment, simple but practical, drinked by kings and peaseant alike.</p>
