--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="header">Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="A photo of a lasagna" height="300" width="600">
     <h2>Description</h2>
         <p>The lasagna is an Italian type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
