--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <h1 class="header">Odin Recipes</h1>
-        <ul class="recipes">
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/water.html">A glass of water</a></li>
-            <li><a href="./recipes/lomosaltado.html">Lomo Saltado</a></li>
-        </ul>
+
+        <div>
+            <div class="side"></div>    
+                <div class="center">    
+                    <ul class="recipes">
+                            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                            <li><a href="./recipes/water.html">A glass of water</a></li>
+                            <li><a href="./recipes/lomosaltado.html">Lomo Saltado</a></li>
+                    </ul>
+                </div>
+            <div class="side"></div>
+        </div>
 </body>
 </html>
