--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,30 +8,42 @@
 </head>
 <body>
     <h1 class="header">Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="A photo of a lasagna" height="300" width="600">
-    <h2>Description</h2>
-        <p>The lasagna is an Italian type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
-            Either term can refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù 
-            (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices.</p>
-    <h2>Ingridients</h2>
-        <ul>
-            <li>Meat</li>
-            <li>Onion and garlic</li>
-            <li>Tomato products</li>
-            <li>Sugar</li>
-            <li>Spices and seasonings</li>
-            <li>Lasagna noodles</li>
-            <li>Cheese</li>
-            <li>Eggs</li>
-            </ul>
-    <h2>Steps</h2> 
-        <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the nooodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna according to the recipe instructions.</li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
-        </ol>
+    <div class="we">
+        <div class="img-div">
+            <img class="img" src="../images/lasagna.jpg" alt="A photo of a lasagna" height="300" width="600">
+        </div>
+        <div class="">
+        <h2>Description</h2>
+            <p>The lasagna is an Italian type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
+                Either term can refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù 
+                (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices.</p>
+        </div>        
+    </div>
+    <div class="we">
+        <div class="le-we">
+            <h2>Ingridients</h2>
+                <ul>
+                    <li>Meat</li>
+                    <li>Onion and garlic</li>
+                    <li>Tomato products</li>
+                    <li>Sugar</li>
+                    <li>Spices and seasonings</li>
+                    <li>Lasagna noodles</li>
+                    <li>Cheese</li>
+                    <li>Eggs</li>
+                    </ul>
+        </div>
+        <div class="ri-we">
+            <h2>Steps</h2> 
+                <ol>
+                    <li>Make the meat sauce.</li>
+                    <li>Cook the nooodles.</li>
+                    <li>Make the ricotta mixture.</li>
+                    <li>Layer the lasagna according to the recipe instructions.</li>
+                    <li>Cover with foil and bake.</li>
+                    <li>Let the lasagna rest before serving.</li>
+                </ol>
+        </div>
+    </div>
 </body>
 </html>
