--- a/recipes/lomosaltado.html
+++ b/recipes/lomosaltado.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lomo Saltado</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
-    <h1 class="header">Lomo Saltado</h1>
-        <img src="../images/lomosaltado.jpg" alt="An image of a lomo saltado" height="300" width="600">
-        <p>This traditional Peruvian dish is a delicious blend of Asian and Latin flavors. Tender strips
-             of steak are stir-fried with onions, tomatoes, and French fries, creating a hearty and flavorful 
-             meal that is perfect for any occasion.</p>
-    <h2>Ingridients</h2>
-        <ul>
-            <li>2 tablespoons vegetable oil, divided</li>
-            <li>1 lb sirloin steak(455 g), cut into strips</li>
-            <li>salt, to taste</li>
-            <li>black pepper, to taste</li>
-            <li>½ red onion, sliced</li>
-            <li>1 medium tomato, sliced</li>
-            <li>2 cloves garlic, minced</li>
-            <li>1 tablespoon aji amarillo paste</li>
-            <li>2 tablespoons soy sauce</li>
-            <li>1 tablespoon white vinegar</li>
-            <li>1 tablespoon fresh cilantro, chopped</li>
-            <li>1 lb french fries(455 g), cooked, hot</li>
-            <li>white rice, cooked, for serving, optional</li>
-        </ul>
-    <h2>Steps</h2>
-        <ol>
-            <li>Heat 1 tablespoon of oil in a large pan over high heat. 
-                Add the steak, season with salt and pepper, and cook until browned, 
-                5-6 minutes. Remove from the pan.</li>
-            <li>Heat the remaining tablespoon of oil in the same pan, then add the red onion 
-                and cook for about 5 minutes, until softened and browned. Add the tomato, garlic, 
-                and aji amarillo paste, and cook for another 5-7 minutes, until the tomatoes have 
-                released some of their juices, but are still intact.</li>
-            <li>Add the soy sauce and vinegar and stir to combine, let cook for 1 minute.</li>
-            <li>Add the steak, fries, and cilantro. Toss gently to coat the fries in the sauce.</li>
-            <li>Serve with rice, if desired.</li>
-            <li>Enjoy!</li>
-        </ol>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lomo Saltado</title>
+        <link rel="stylesheet" href="../styles.css">
+    </head>
+    <body>
+        <h1 class="header">Lomo Saltado</h1>
+        <div class="we">
+            <div class="img-div">
+                <img class="img-div" src="../images/lomosaltado.jpg" alt="An image of a lomo saltado">
+            </div>
+            <div class="">
+                <h2>Description</h2>
+                <p>This traditional Peruvian dish is a delicious blend of Asian and Latin flavors. Tender strips
+                of steak are stir-fried with onions, tomatoes, and French fries, creating a hearty and flavorful 
+                meal that is perfect for any occasion.</p>
+            </div>
+        </div>
+        <div class="we">
+            <div class="le-we">
+                <h2>Ingridients</h2>
+                    <ul>
+                        <li>2 tablespoons vegetable oil, divided</li>
+                        <li>1 lb sirloin steak(455 g), cut into strips</li>
+                        <li>salt, to taste</li>
+                        <li>black pepper, to taste</li>
+                        <li>½ red onion, sliced</li>
+                        <li>1 medium tomato, sliced</li>
+                        <li>2 cloves garlic, minced</li>
+                        <li>1 tablespoon aji amarillo paste</li>
+                        <li>2 tablespoons soy sauce</li>
+                        <li>1 tablespoon white vinegar</li>
+                        <li>1 tablespoon fresh cilantro, chopped</li>
+                        <li>1 lb french fries(455 g), cooked, hot</li>
+                        <li>white rice, cooked, for serving, optional</li>
+                    </ul>
+            </div>
+            <div class="ri-we">
+            <h2>Steps</h2>
+                <ol>
+                    <li>Heat 1 tablespoon of oil in a large pan over high heat. 
+                        Add the steak, season with salt and pepper, and cook until browned, 
+                        5-6 minutes. Remove from the pan.</li>
+                    <li>Heat the remaining tablespoon of oil in the same pan, then add the red onion 
+                        and cook for about 5 minutes, until softened and browned. Add the tomato, garlic, 
+                        and aji amarillo paste, and cook for another 5-7 minutes, until the tomatoes have 
+                        released some of their juices, but are still intact.</li>
+                    <li>Add the soy sauce and vinegar and stir to combine, let cook for 1 minute.</li>
+                    <li>Add the steak, fries, and cilantro. Toss gently to coat the fries in the sauce.</li>
+                    <li>Serve with rice, if desired.</li>
+                    <li>Enjoy!</li>
+                </ol>
+            </div>
+        </div>
+    </body>
 </html>
