--- a/recipes/water.html
+++ b/recipes/water.html
@@ -8,14 +8,24 @@
 </head>
 <body>
     <h1 class="header">A glass of water</h1>
-    <img src="../images/water.png" alt="An image of a glass of water" height="300" width="600">
-    <h2>Description</h2>
-        <p>The oldest refreshment, simple but practical, drinked by kings and peaseant alike.</p>
-    <h2>Ingridients</h2>
-        <ul>
-            <li>A glass</li>
-            <li>Water supply</li>
-        </ul>
+    <div class="we">
+        <div class="img">
+            <img class="" src="../images/water.png" alt="An image of a glass of water" height="300" width="600">
+        </div>
+        <div class="">
+            <h2>Description</h2>
+            <p>The oldest refreshment, simple but practical, drinked by kings and peaseant alike.</p>
+        </div>
+    </div>
+    <div class="we">
+    <div class="le-we">
+        <h2>Ingridients</h2>
+            <ul>
+                <li>A glass</li>
+                <li>Water supply</li>
+            </ul>
+    </div>
+    <div class="ri-we">
     <h2>Steps</h2>
         <ol>
             <li>Grab the glass</li>
@@ -23,5 +33,7 @@
             <li>Fill the glass with water</li>
             <li>Enjoy</li>
         </ol>
+    </div>
+    </div>
 </body>
 </html>
