--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <h1 class="header">Lasagna</h1>
     <div class="we">
         <div class="img-div">
-            <img class="img" src="../images/lasagna.jpg" alt="A photo of a lasagna" height="300" width="600">
+            <img class="img-div" src="../images/lasagna.jpg" alt="A photo of a lasagna">
         </div>
         <div class="">
         <h2>Description</h2>
