--- a/recipes/water.html
+++ b/recipes/water.html
@@ -9,8 +9,8 @@
 <body>
     <h1 class="header">A glass of water</h1>
     <div class="we">
-        <div class="img">
-            <img class="" src="../images/water.png" alt="An image of a glass of water" height="300" width="600">
+        <div class="img-div">
+            <img class="img-div" src="../images/water.png" alt="An image of a glass of water">
         </div>
         <div class="">
             <h2>Description</h2>
