--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="header">Odin Recipes</h1>
-
+    <h1 class="header">Odin Recipes</h1> 
+    <div class="wa">
         <div>
-            <div class="side"></div>    
-                <div class="center">    
-                    <ul class="recipes">
-                            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-                            <li><a href="./recipes/water.html">A glass of water</a></li>
-                            <li><a href="./recipes/lomosaltado.html">Lomo Saltado</a></li>
-                    </ul>
-                </div>
-            <div class="side"></div>
+            <ul class="recipes">
+                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/water.html">A glass of water</a></li>
+                <li><a href="./recipes/lomosaltado.html">Lomo Saltado</a></li>
+            </ul> 
         </div>
+    </div>
 </body>
 </html>
